engines/ep/src/warmup.cc
@@ -1786,7 +1786,7 @@ void Warmup::loadingAccessLog(uint16_t shardId)
                 (size_t)-1) {
                 success = true;
             }
-        } catch (MutationLog::ReadException &e) {
+        } catch (const std::exception& e) {
             corruptAccessLog = true;
             EP_LOG_WARN("Error reading warmup access log:  {}", e.what());
         }
@@ -1804,7 +1804,7 @@ void Warmup::loadingAccessLog(uint16_t shardId)
                     (size_t)-1) {
                     success = true;
                 }
-            } catch (MutationLog::ReadException &e) {
+            } catch (const std::exception& e) {
                 corruptAccessLog = true;
                 EP_LOG_WARN("Error reading old access log:  {}", e.what());
             }
